[package]
name = "actix_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.76.0", features = ["behavior-version-latest"] }
chrono = "0.4.40"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
once_cell = "1.21.3"
